force-app/main/default/objects/Fixed_Deposit__c/Fixed_Deposit__c.object-meta.xml
<CustomObject>
    <label>Fixed Deposit</label>
    <nameField>
        <label>Fixed Deposit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fixed Deposits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>