force-app/main/default/objects/Fixed_Deposit__c/fields/Invested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invested_Amount__c</fullName>
    <label>Invested Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>