force-app/main/default/objects/Fixed_Deposit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Parent_Bank__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>